spacing corrected

--- a/src/styles/ClientList.css
+++ b/src/styles/ClientList.css
@@ -1,19 +1,34 @@
-
 .client-imgs-container {
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
-  .client-img {
-    height: 120px;
-    width: auto;
-    max-width: 320px;
-    filter: grayscale(1);
-    margin-right: 15px;
-  }
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.client-img {
+  height: 120px;
+  width: auto;
+  max-width: 320px;
+  filter: grayscale(1);
+  margin-right: 15px;
+}
+
+.client-img:nth-child(5) {
+  height: 71px;
+  width: 83%;
+}
 
 @media screen and (max-width: 500px) {
+  .client-img {
+    margin-right: 0;
+    height: 72px;
+  }
+  .client-img:nth-child(5) {
+    border: 1px solid black;
+    opacity: 0.7;
+  }
+}
 
-    .client-img {
-      margin-right: 0;
-    }
+@media screen and (max-width: 326px) {
+  .client-img:nth-child(5) {
+    height: 71px;
+    width: 83%;
+  }
 }
